# rust-dynamodb-mailing-list

./: .gitignore  Cargo.toml  README.md  news.json
examples/: main.rs
src/: dynamo.rs  lib.rs
