[package]
name = "rust-news"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
chrono = "0.4.19"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
tokio = { version = "0.2", features = ["full"] }
